--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.5.0",
     "mysql2": "^2.1.0",
     "pretty-bytes": "^5.3.0",
+    "request": "^2.88.2",
     "three": "^0.115.0",
     "three-vignette-background": "^1.0.3",
     "uuid": "^8.0.0",
@@ -39,6 +40,7 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "concurrently": "^5.2.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.7"
   }
 }
