--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@tweenjs/tween.js": "^18.5.0",
     "aws-sdk": "^2.685.0",
+    "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^10.0.0",
     "body-parser": "^1.19.0",
