--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@tweenjs/tween.js": "^18.5.0",
     "aws-sdk": "^2.685.0",
-    "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^10.0.0",
     "body-parser": "^1.19.0",
@@ -31,7 +30,6 @@
     "jquery": "^3.5.0",
     "mysql2": "^2.1.0",
     "pretty-bytes": "^5.3.0",
-    "request": "^2.88.2",
     "three": "^0.115.0",
     "three-vignette-background": "^1.0.3",
     "uuid": "^8.0.0",
@@ -41,7 +39,6 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "concurrently": "^5.2.0",
-    "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.7"
+    "node-fetch": "^2.6.0"
   }
 }
